Forward pass is working fast

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ set(CMAKE_CROSSCOMPILING "True")
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -O0")
+# set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -O0")
 
 # I can use optimization to run the neural network but breaks ops
-# set(CMAKE_CXX_FLAGS "-O2")
+set(CMAKE_CXX_FLAGS "-O2")
 
 file(GLOB_RECURSE SOURCES
       # micrograd/*.cpp
