--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,18 +5,18 @@ set(CMAKE_CROSSCOMPILING "True")
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -O0")
+# set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -O0")
 
 # I can use optimization to run the neural network but breaks ops
-# set(CMAKE_CXX_FLAGS "-O2")
+set(CMAKE_CXX_FLAGS "-O2")
 
 file(GLOB_RECURSE SOURCES
       # micrograd/*.cpp
       # micrograd/**/*.cpp
       # examples/*.cpp
       # demo/*.cpp
-      demo/demo.cpp
-      # demo/test/test.cpp
+      # demo/demo.cpp
+      demo/test/test.cpp
 )
 
 add_library(micrograd INTERFACE)
