cleaning things up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,9 @@ set(CMAKE_CXX_FLAGS "-O2")
 file(GLOB_RECURSE SOURCES
       # micrograd/*.cpp
       # micrograd/**/*.cpp
-      # examples/*.cpp
+      examples/video_example.cpp
       # demo/*.cpp
-      demo/demo.cpp
+      # demo/demo.cpp
       # demo/test/test.cpp
 )
 
